--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
@@ -53,9 +54,9 @@
           <li><a class="nav-link scrollto" href="#services">Objetivos</a></li>          
           <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Testimonios</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>          
+          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li><br><br>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle"></i>        
       </nav><!-- .navbar -->
 
     </div>
@@ -71,7 +72,7 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="#about" class="btn-get-started scrollto">Contacto</a>
+        <a href="#contact" class="btn-get-started scrollto">Contacto</a>
       </div>
 
       <div class="row icon-boxes">
