--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!--jquery-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <!--end-->
+
   <!-- =======================================================
   * Template Name: OnePage - v4.10.0
   * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
@@ -79,7 +83,7 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
           <div class="icon-box">
             <center><img src="./assets/img/areas/AreaDorada.png" class="img-fluid" style="width:50%" alt="area-innovacion"></center>
-            <center><h4 class="title"><a href="">Área de innovación educativa</a></h4></center>            
+            <center><h4 class="title"><a href="./views/area.html">Área de innovación educativa</a></h4></center>            
           </div>
         </div>
 
@@ -424,7 +428,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2>Testimonios</h2>
           <p class="lead">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -435,7 +439,7 @@
               <div class="testimonial-item">
                 <p class="lead">
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Gracias a esta unidad pude realizar cápsulas educativas que potencian el desarrollo de los módulos virtuales.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
